Update 1.0.1
Fixed /tensor replay <checkName> to actually replay the click-data so the check you made for that specific data flags.

Fixed /tensor replayall <FilePath> to actually replay the click-data so the check you made for that specific data flags.

Updated the ViolationService for performance and remove the hard-coded "is clicking sus" alert-theme. So all checks have a category for what they should flag as now.

E.G: AutoClickerB will be "Click Per Second Limit",

rest will be "Clicking Suspiciousl" you can add more if anyone desides to make this an actual base.